# skyalyticAI

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  train_niea.py  理论.md
data/: knowledge_sources_cn.json
reports/: acceptance_report.json
scripts/: collect_open_knowledge_cn.py  fetch_public_corpus.py  run_growth_training.py  seed_curriculum_corpus.py  validate_industrial_ready.py
skyalyticAI/: __init__.py  brain.py
skyalyticAI/active_inference/: __init__.py  agent.py
skyalyticAI/consciousness/: __init__.py
skyalyticAI/data/: __init__.py  corpus_manager.py  education_config.py
skyalyticAI/env/: __init__.py  curriculum_world.py  environment.py  grid_world.py  social_classroom_world.py
skyalyticAI/evolution/: __init__.py
skyalyticAI/exams/: __init__.py  char_prediction_exam.py  exam_suite.py  multi_step_reasoning_exam.py  reading_comprehension_exam.py
skyalyticAI/gpu/: __init__.py
skyalyticAI/language/: __init__.py  language_head.py  text_encoder.py
skyalyticAI/memory/: __init__.py  consolidation.py  hdc.py
skyalyticAI/metacognition/: __init__.py  metacognition.py
skyalyticAI/neurons/: __init__.py  alif.py  lif.py  snn_layer.py  sparse_connectivity.py
skyalyticAI/npc/: __init__.py  persona_registry.py  teacher_npc.py  teacher_service.py
skyalyticAI/perception/: __init__.py  audio_encoder.py  multimodal_fusion.py  visual_encoder.py
skyalyticAI/plasticity/: __init__.py  stdp.py  stdp_layer.py
skyalyticAI/predictive_coding/: __init__.py  pcn.py  pcn_layer.py
tests/: test_core_modules.py  test_environments.py  test_integration.py
(+10 files in other folders)
